# quadruped_robot_irobot

./: CMakeLists.txt  package.xml
action/: normal_walk.py  test_data.py
config/: config_xacro.yaml  controllers.yaml
data/: theta2_pos_BL.npy  theta2_pos_BR.npy  theta2_pos_FL.npy  theta2_pos_FR.npy  theta4_pos_BL.npy  theta4_pos_BR.npy  theta4_pos_FL.npy  theta4_pos_FR.npy
launch/: rviz.launch  xacro_control.launch  xacro_controllers_loop.launch  xacro_gazebo.launch
rviz/: rviz.rviz  urdf.rviz
xacro/model/: spotdog.xacro
xacro/transmission/: transmission.xacro
