<package format="2">
  <name>spotdog</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for spotdog</p>
    <p>This package contains configuration data, 3D models and launch files
for spotdog robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>




  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>

  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>urdf</build_depend>
  <!-- <build_depend>sdf</build_depend> -->
  <build_depend>controller_manager</build_depend>
  <build_depend>joint_state_controller</build_depend>
  <build_depend>robot_state_publisher</build_depend>
  <build_depend>angles</build_depend>
  <build_depend>control_toolbox</build_depend>
  <build_depend>gazebo_dev</build_depend>
  <build_depend>hardware_interface</build_depend>
  <build_depend>joint_limits_interface</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>transmission_interface</build_depend>
  <build_depend>gazebo_ros_control</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>urdf</build_export_depend>
  <!-- <build_export_depend>sdf</build_export_depend> -->
  <build_export_depend>controller_manager</build_export_depend>
  <build_export_depend>joint_state_controller</build_export_depend>
  <build_export_depend>robot_state_publisher</build_export_depend>
  <build_export_depend>angles</build_export_depend>
  <build_export_depend>control_toolbox</build_export_depend>
  <build_export_depend>gazebo_dev</build_export_depend>
  <build_export_depend>hardware_interface</build_export_depend>
  <build_export_depend>joint_limits_interface</build_export_depend>
  <build_export_depend>pluginlib</build_export_depend>
  <build_export_depend>transmission_interface</build_export_depend>
  <build_export_depend>gazebo_ros_control</build_export_depend>


  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>urdf</exec_depend>
  <!-- <exec_depend>sdf</exec_depend> -->
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>angles</exec_depend>
  <exec_depend>control_toolbox</exec_depend>
  <exec_depend>gazebo_dev</exec_depend>
  <exec_depend>hardware_interface</exec_depend>
  <exec_depend>joint_limits_interface</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>transmission_interface</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>

  <export>
    <architecture_independent />
     <gazebo_ros_control plugin="/home/edw/spotdog8/src/spotdog/gazebo_closed_loop_hw_sim_plugins.xml"/>
  </export>
</package>
